--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -16,4 +16,9 @@
     <ProjectReference Include="..\Persistence\Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Application\Controller\" />
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
